--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.1.0",
     "bootstrap": "^5.0.1",
     "rxjs": "~6.6.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
